--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@
 
 body {
     
-    background-image: url(image/nasa-Q1p7bh3SHj8-unsplash.jpg);
+    background-image: url(image/nasa.jpg);
     background-size:cover;
    
  
