--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,7 @@ body {
     
     background-image: url(image/nasa.jpg);
     background-size:cover;
+    background-repeat:no-repeat;
    
  
     color:black;
