--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,7 @@ body {
     background-image: url(image/nasa.jpg);
     background-size:cover;
     background-repeat:no-repeat;
+    object-fit: cover;
    
  
     color:black;
