--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,8 @@
 }
 
 body {
+    min-width:600px;
+    min-height:600px;
     width:100%;
     height:100%;
     background-image: url(image/nasa.jpg);
