--- a/styles.css
+++ b/styles.css
@@ -11,8 +11,8 @@
 }
 
 body {
-    min-width:600px;
-    min-height:600px;
+    min-width:100%;
+    min-height:100%;
     width:100%;
     height:100%;
     background-image: url(image/nasa.jpg);
