--- a/styles.css
+++ b/styles.css
@@ -11,10 +11,10 @@
 }
 
 body {
-    min-width:100%;
-    min-height:100%;
+    
+    
     width:100%;
-    height:100%;
+    height:100vh;
     background-image: url(image/nasa.jpg);
     background-size:cover;
     background-repeat:no-repeat;
