--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ body {
     width:100%;
     height:100vh;
     background-image: url(image/nasa.jpg);
-    background-size:cover;
+    background-size:800px;
     background-repeat:no-repeat;
     
     
