--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ body {
     
    
     background-image: url(image/nasa.jpg);
-    background-size:cover;
+    background-size:100% 100%;
     background-repeat:no-repeat;
     
     
