--- a/styles.css
+++ b/styles.css
@@ -13,9 +13,9 @@
 body {
     
     
-   
+    height:800px;
     background-image: url(image/nasa.jpg);
-    background-size:100% 100%;
+    background-size:cover;
     background-repeat:no-repeat;
     
     
