--- a/styles.css
+++ b/styles.css
@@ -107,7 +107,10 @@ h1 {
     font-family:clockFont;
     letter-spacing:5px;
     white-space: nowrap;
-    
+    position:absolute;
+    top:20%;
+    left:50%;
+    transform:translate(-50%, -50%);
     text-shadow: 0 0 10px #E8AC64;
     
     
