--- a/styles.css
+++ b/styles.css
@@ -64,14 +64,14 @@ body {
 
 
 .clock span {
-    font-size:65px;
+    font-size:50px;
     width:100px;
     display:inline-block;
     text-align:center;
     position:relative;
     color: white;
-   letter-spacing: 5px;
- 
+    letter-spacing: 5px;
+    margin-right:8px;
     font-family:clockFont;
     text-shadow: 0 0 22px #E8AC64;
     font-weight:700;
@@ -112,7 +112,7 @@ h1 {
     letter-spacing:5px;
     white-space: nowrap;
     position:absolute;
-    top:30%;
+    top:35%;
     left:50%;
     transform:translate(-50%, -50%);
     text-shadow: 0 0 14px #E8AC64;
