--- a/styles.css
+++ b/styles.css
@@ -120,10 +120,15 @@ h1 {
     
     
     
+    
 }
 
 
-
+.underline {
+    border-bottom:6px solid white;
+    padding-bottom:10px;
+    
+}
 
 
 
