--- a/styles.css
+++ b/styles.css
@@ -129,7 +129,7 @@ h1 {
     
 }
 
-#month, #day, #year {
+#month, #date, #year {
     color:white;
     font-size:30px;
     font-family: clockFont;
@@ -145,4 +145,26 @@ h1 {
     bottom:30%;
     left:50%;
     transform: translate(-50%, -50%);
+}
+
+
+.container3 {
+    position: absolute;
+    top:75%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    
+    
+    
+}
+
+#day {
+    font-size:40px;
+    color:white;
+    text-shadow: 0 0 14px #E8AC64;
+    font-weight:bold;
+    font-family:'Times New Roman', Times, serif;
+    
+    
+    
 }
