--- a/styles.css
+++ b/styles.css
@@ -168,3 +168,13 @@ h1 {
     
     
 }
+
+.date-month-year {
+    width:100%;
+    height:100%;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    
+    
+}
