--- a/styles.css
+++ b/styles.css
@@ -140,6 +140,14 @@ h1 {
     
 }
 
+#month {
+    margin-left:8px;
+}
+
+#year {
+    margin-left:8px;
+}
+
 .container2 {
     position:absolute;
     bottom:30%;
@@ -173,7 +181,7 @@ h1 {
     width:100%;
     height:100%;
     display:flex;
-    align-items:center;
+    align-items: center;
     justify-content:center;
     
     
