Update body css

--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,8 @@ body {
     background-image: url(image/nasa.jpg);
     background-size:cover;
     background-repeat:no-repeat;
+    background-attachment: fixed;
+    background-position:center;
     
     
    
@@ -126,6 +128,7 @@ h1 {
 .slash {
     font-size:30px;
     color:white;
+    font-weight: bold;
     
 }
 
