--- a/styles.css
+++ b/styles.css
@@ -109,8 +109,8 @@ body {
 
 h1 {
     color:white;
-    font-size:80px;
-    font-family:clockFont;
+    font-size:120px;
+    font-family:'Times New Roman', Times, serif;
     letter-spacing:5px;
     white-space: nowrap;
     position:absolute;
@@ -125,33 +125,30 @@ h1 {
     
 }
 
-.slash {
-    font-size:30px;
-    color:white;
-    font-weight: bold;
-    
-}
 
 #month, #date, #year {
     color:white;
-    font-size:30px;
+    font-size:28px;
     font-family: clockFont;
-    letter-spacing: 5px;
     font-weight:bold;
-    text-shadow: 0 0 14px #E8AC64;
+    text-shadow: 0 0 20px #E8AC64;
+    margin-right:8px;
+
    
     
 }
 
 #month {
-    margin-left:8px;
+    margin-left:15px;
+    
 }
 
 #year {
-    margin-left:8px;
+    margin-left:15px;
 }
 
-.container2 {
+.container3 {
+    
     position:absolute;
     bottom:30%;
     left:50%;
@@ -159,7 +156,7 @@ h1 {
 }
 
 
-.container3 {
+.container2 {
     position: absolute;
     top:75%;
     left: 50%;
@@ -170,7 +167,8 @@ h1 {
 }
 
 #day {
-    font-size:40px;
+    
+    font-size:50px;
     color:white;
     text-shadow: 0 0 14px #E8AC64;
     font-weight:bold;
@@ -184,8 +182,15 @@ h1 {
     width:100%;
     height:100%;
     display:flex;
-    align-items: center;
+    align-items: end;
     justify-content:center;
     
+    
+}
+
+.slash {
+    font-size:30px;
+    font-weight:bold;
+    color:white;
     
 }
