--- a/styles.css
+++ b/styles.css
@@ -66,8 +66,8 @@ body {
 
 
 .clock span {
-    font-size:55px;
-    width:100px;
+    font-size:40px;
+    width:38px;
     display:inline-block;
     text-align:center;
     position:relative;
@@ -83,7 +83,7 @@ body {
 
 .clock span::after {
     content:'';
-    font-size:12px;
+    font-size:10px;
     position:absolute;
     bottom: -20px;
     left:50%;
@@ -109,12 +109,12 @@ body {
 
 h1 {
     color:white;
-    font-size:120px;
+    font-size:8vw;
     font-family:'Times New Roman', Times, serif;
     letter-spacing:5px;
     white-space: nowrap;
     position:absolute;
-    top:35%;
+    top:30%;
     left:50%;
     transform:translate(-50%, -50%);
     text-shadow: 0 0 14px #E8AC64;
@@ -168,7 +168,7 @@ h1 {
 
 #day {
     
-    font-size:50px;
+    font-size:45px;
     color:white;
     text-shadow: 0 0 14px #E8AC64;
     font-weight:bold;
@@ -194,3 +194,4 @@ h1 {
     color:white;
     
 }
+
