--- a/styles.css
+++ b/styles.css
@@ -174,7 +174,7 @@ body {
 }
 
 h1 {
-    color: black;
+    color: white;
     font-family: "Irish Grover", system-ui;
     text-shadow: 0 0 14px white;
     font-size: 5vw;
