--- a/styles.css
+++ b/styles.css
@@ -83,7 +83,7 @@ body {
 
 
 .title {
-    color: black;
+    color: white;
     font-size: 8vw;
     font-family: 'Times New Roman', Times, serif;
     letter-spacing: 5px;
