--- a/styles.css
+++ b/styles.css
@@ -83,7 +83,7 @@ body {
 
 
 .title {
-    color: white;
+    color: #0077b6;
     font-size: 8vw;
     font-family: Orbitron;
     font-weight:400;
@@ -93,8 +93,9 @@ body {
     top: 30%;
     left: 50%;
     transform: translate(-50%, -50%);
-    text-shadow: 0 0 14px #DB9B59;
     margin-top: 0;
+    font-weight: bold;
+    text-shadow: 0 0 8px black;
 
 
 
@@ -106,11 +107,11 @@ body {
 #month,
 #date,
 #year {
-    color: white;
+    color: #0077b6;
     font-size: 30px;
     font-family: clockFont;
     font-weight: bold;
-    text-shadow: 0 0 4px #DB9B59;
+    text-shadow: 0 0 4px black;
     margin-right: 8px;
 
 
@@ -148,9 +149,9 @@ body {
 #day {
 
     font-size: 40px;
-    color: white;
-    text-shadow: 0 0 10px #DB9B59;
-    font-weight:400;
+    color: #0077b6;
+    text-shadow: 0 0 10px black;
+    font-weight:800;
     font-family: Orbitron;
 
 
@@ -175,9 +176,9 @@ body {
 }
 
 h1 {
-    color: white;
+    color: #0077b6;
     font-family: Orbitron;
-    text-shadow: 0 0 14px #DB9B59;
+   text-shadow: 0 0 10px black;
     font-size: 4vw;
     margin: 20px;
     letter-spacing: 2px;
