Add letter spacing

--- a/styles.css
+++ b/styles.css
@@ -152,6 +152,7 @@ body {
     color: #0077b6;
     text-shadow: 0 0 10px black;
     font-weight:800;
+    letter-spacing: 10px;
     font-family: Orbitron;
 
 
