--- a/styles.css
+++ b/styles.css
@@ -150,7 +150,7 @@ body {
 
 #day {
 
-    font-size: 40px;
+    font-size: 30px;
     color: #0077b6;
     text-shadow: 0 0 10px black;
     font-weight:800;
@@ -183,7 +183,7 @@ body {
 
 
 .logo {
-    width:9vw;
+    width:60px;
     margin: 5px 0 0 20px;
 }
 
