--- a/styles.css
+++ b/styles.css
@@ -183,8 +183,11 @@ body {
 
 
 .logo {
+    display:flex;
+    justify-content:start;
     width:60px;
-    margin: 5px 0 0 20px;
+    height:50px;
+    margin: 10px 0 0 20px;
 }
 
 
