--- a/styles.css
+++ b/styles.css
@@ -184,11 +184,19 @@ body {
 
 .logo {
     
-    width:60px;
-    height:60px;
-    margin: 10px 0 0 20px;
+    width:70px;
+    height:70px;
+   
 }
 
+
+.logo-container {
+    display:flex;
+    justify-content:start;
+    margin:20px 0 0 20px;
+    
+   
+}
 
 
 
