--- a/styles.css
+++ b/styles.css
@@ -192,8 +192,10 @@ body {
 
 .logo-container {
     display:flex;
-    justify-content:start;
+    justify-content:center;
+    align-items:center;
     margin:20px 0 0 20px;
+  
     
    
 }
