--- a/styles.css
+++ b/styles.css
@@ -63,13 +63,8 @@ body {
 
 .clock span {
     font-size:50px;
-    width: 45px;
-    display: inline-block;
-    text-align: center;
-    position: relative;
     color: white;
     letter-spacing: 5px;
-    margin-right: 8px;
     font-family: clockFont;
     text-shadow: 0 0 4px #DB9B59;
     font-weight:bold;
@@ -86,17 +81,14 @@ body {
 
 .title {
     color: #0077b6;
-    font-size: 8vw;
+    font-size: fit-content;
     font-family: Orbitron;
-    font-weight:400;
     letter-spacing: 5px;
     white-space: nowrap;
     position: absolute;
     top: 30%;
     left: 50%;
     transform: translate(-50%, -50%);
-    margin-top: 0;
-    font-weight: bold;
     text-shadow: 0 0 8px black;
 
 
@@ -177,15 +169,16 @@ body {
 
 
 #am-pm {
-    margin-left: 10px;
+    margin-left: 20px;
+    
 }
 
 
 
 .logo {
     
-    width:70px;
-    height:70px;
+    width:80px;
+    height:80px;
    
 }
 
