--- a/styles.css
+++ b/styles.css
@@ -45,11 +45,10 @@ body {
 }
 
 .clock {
-    width: 100%;
-    height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
+    padding:30px;
 
 
 
@@ -129,9 +128,10 @@ body {
 .container3 {
 
     position: absolute;
-    bottom: 30%;
+    bottom: 25%;
     left: 50%;
     transform: translate(-50%, -50%);
+    
 }
 
 
@@ -151,8 +151,11 @@ body {
     color: #0077b6;
     text-shadow: 0 0 10px black;
     font-weight:800;
-    letter-spacing: 10px;
+    letter-spacing: 20px;
     font-family: Orbitron;
+    
+    
+    
    
 
 
@@ -163,8 +166,10 @@ body {
     width: 100%;
     height: 100%;
     display: flex;
-    align-items: end;
+    align-items: center;
     justify-content: center;
+    margin-top:50px;
+    
   
     
 
