--- a/styles.css
+++ b/styles.css
@@ -66,6 +66,9 @@ body {
     margin:4px;
     transition:.5s;
     text-shadow: 0 0 10px #DB9B59;
+    margin-top:40px;
+   
+    
 }
 
 
@@ -78,7 +81,10 @@ body {
 
 
 
-
+.date-month-year {
+    display:flex;
+    justify-content:center;
+}
 
 
 
@@ -94,6 +100,7 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     text-shadow: 0 0 8px black;
+    
     
  
 
@@ -117,6 +124,7 @@ body {
 
 
 
+
 }
 
 #month, #year {
@@ -137,6 +145,7 @@ body {
     font-weight:bold;
     letter-spacing: 20px;
     font-family: Orbitron;
+    
     
     
     
