--- a/styles.css
+++ b/styles.css
@@ -69,7 +69,7 @@ body {
 
 
 .clock span {
-    font-size: 50px;
+    font-size: 55px;
     width:110px;
     color: white;
     letter-spacing: 5px;
@@ -155,6 +155,7 @@ h1 {
     font-size:20px;
     font-weight:bold;
     text-shadow: 0 0 4px #DB9B59;
+   
 }
 
 
@@ -167,9 +168,11 @@ h1 {
 
 #day {
     color:white;
-    font-size:25px;
+    font-size:20px;
     text-shadow: 0 0 4px #DB9B59;
     font-weight:bold;
+    text-wrap:nowrap;
+    margin-right:20px;
     
 }
 
@@ -177,7 +180,7 @@ h1 {
 
 .container3 {
     position:absolute;
-    top:80%;
+    top:75%;
     left:50%;
     transform: translate(-50%);
 
