--- a/styles.css
+++ b/styles.css
@@ -94,9 +94,9 @@ body {
 
 .clock span::after {
    
-    font-size: 10px;
+    font-size: 12px;
     position:absolute;
-    bottom: -20px;
+    bottom: -22px;
     left:50%;
     transform:translateX(-50%);
 }
@@ -111,11 +111,13 @@ body {
 #mnts::after {
     content:"MINS";
     font-family:Orbitron;
+    letter-spacing:0;
 }
 
 #scnds::after {
     content:"SEC";
     font-family:Orbitron;
+    letter-spacing:0;
 }
 
 
