--- a/styles.css
+++ b/styles.css
@@ -279,7 +279,8 @@ body {
     position:relative;
     margin: 10px auto 0 auto;
     text-shadow: 0 0 4px #DB9B59;
-    border: 2px solid white;
+    border: 3px solid white;
+    box-shadow: 0 0 4px #DB9B59;
     
 }
 
