--- a/styles.css
+++ b/styles.css
@@ -50,7 +50,8 @@ body {
 #new-york, #tokyo-jap, #shanghai-china, #sydney-Aus, #berlin-ger, #los-angeles, #saudi-arabia, #oslo-norway, #new-zeal, #ottawa-can{
     color:white;
     font-family:clockFont;
-    font-size:3vw;
+    font-size:2vw;
+    
     
    
 }
@@ -59,20 +60,22 @@ body {
 .newyork, .tokyojap, .shanghai, .Sydney, .berlin, .losangeles, .Saudi, .Oslo, .newZealand, .ottawa  {
     color:white;
     font-family:Arial,san-serif;
-    font-size:3vw;
+    font-size:2vw;
   
 }
 
  .tokyojap-container, .shanghai-container, .sydney-container,.newzealand-container{
-    margin:42px 0 0 4px;
+    margin:40px 0 0 4px;
     font-weight:bold;
-    text-shadow: 0 0 4px #DB9B59;
+  
    
 
 
     
 
 }
+
+
 
 .time-container {
     display:flex;
@@ -84,6 +87,12 @@ body {
     
 }
 
+#new-york-date, #tokyo-date, #shanghai-date, #sydney-date, #newzeal-date, #berlin-date, #La-date, #Saudi-date, #Oslo-date, #Ottawa-date{
+    color:white;
+    font-size:2vw;
+    font-family:Arial, sans-serif;
+}
+
 
 
 .newyork-container {
@@ -92,38 +101,38 @@ body {
     top:2%;
     font-weight:bold;
     text-shadow: 0 0 4px #DB9B59;
-    background-color:rgba(0, 0,0, .2);
     padding: 5px 5px 5px 5px;
+    background: rgba(0, 0, 0, .2)
+ 
+   
    
 
     
 }
-    
 
 .berlin-container {
-    display:flex;
-    flex-direction:column;
-    justify-content:flex-end;
-    align-items:center;
-    text-align:center;
-    background: rgba(0, 0, 0, .1);
-    padding:5px 10px 5px 10px;
-
-    
-}
-
-.los-container, .saudi-container, .Oslo-container, .Ottawa-container {
-    margin-top:45px;
-}
-
-.main-container {
     position:absolute;
     right:1%;
-    top:20px;
-    font-size:3vw;
+    top:2%;
     font-weight:bold;
     text-shadow: 0 0 4px #DB9B59;
-   
+    padding:5px 5px 5px 5px;
+    background: rgba(0, 0, 0, .2);
+}
+    
+
+.los-container, .saudi-container, .oslo-container, .ottawa-container  {
+    margin:40px 4px 0 0px;
+    font-weight:bold;
+}
+
+
+.main-container {
+   display:flex;
+   justify-content: flex-end;
+   align-items: flex-end;
+   text-align:center;
+
 }
 
 
@@ -270,9 +279,9 @@ body {
 
 
 .clocks {
-    width:130px;
-    height:130px;
-    background-color:rgba(0, 0,0, .8);
+    width:150px;
+    height:150px;
+    background-color:rgba(0, 0,0, .2);
     color:white;
     border-radius:50%;
     font-family: Arial,sans-serif;
