--- a/styles.css
+++ b/styles.css
@@ -233,21 +233,23 @@ body {
 
 
 
-
-
-#date,
-#month,
-#year {
-    color: white;
+#manila-date {
+    color:white;
+    font-family:clockFont;
     font-size:20px;
     font-weight:bold;
-    text-shadow: 0 0 4px #DB9B59;
-    text-wrap: nowrap;
-   
+    margin-top:20px;
+    text-shadow: 0 0 4px #DB9B59 ;
+    letter-spacing:2px;
 }
 
 
 
+#weekday {
+    font-size:20px;
+    
+
+}
 
 
 #am-pm {
