--- a/styles.css
+++ b/styles.css
@@ -373,3 +373,24 @@ body {
   
 }
 
+h1 {
+    color:white;
+    font-size:20px;
+}
+
+#weather {
+    color:white;
+    font-size:12px;
+}
+
+.weather-container {
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items:center;
+    text-align: center;
+    font-weight:bold;
+    font-family:Arial,sans-serif;
+    margin:90px;
+    text-shadow: 0 0 4px #DB9B59 ;
+}
