--- a/styles.css
+++ b/styles.css
@@ -371,6 +371,7 @@ body {
     padding:20px;
     height:100px;
     background:rgba(85, 84, 84, 0.1);
+    border-radius:5px;  
 }
 
 .weather-container {
